<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2015 Garmin International Ltd.
 Subject to Garmin SDK License Agreement and Wearables Application Developer Agreement.
-->
<resources>

    <string name="app_name">Stress Intervention</string>
    <string name="load_devices">Reload Devices</string>
    <string name="initialization_error">Failed to initalize the SDK.\n</string>
    <string name="service_unavailable">The ConnectIQ service is unavailabe.</string>
    <string name="tap_for_sensor">Tap here to see sensor data.</string>
    <string name="open_app_open">Tap here to open the Watch app on the device.</string>
    <string name="open_store">Tap here to open ConnectIQ Store.</string>
    <string name="open_app_already_open">The Comm app is already open on the device.</string>
    <string name="received_message">Received message from device.</string>

    <string name="hello_world_message">Hello World!</string>
    <string name="short_string_message">Hi</string>
    <string name="medium_string_message">Why hello there, good world! This is a medium-length string.</string>
    <string name="long_string_message">Lorem ipsum dolor sit amet, pri ex epicuri luptatum, cum tantas partem fastidii an. Ea quot iudicabit vim, vis copiosae repudiandae at. Pri ut agam animal epicuri, nam cu omnis latine voluptatibus. Est dicat viderer ei, at possit sapientem ullamcorper vix, et eum virtute dolorum intellegat. No summo animal forensibus sit, singulis dissentiunt vix at, id congue theophrastus cum. Eam ex semper molestiae, te porro labore mel.</string>
    <string name="absurd_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at ultricies enim. Quisque venenatis sed nisl a molestie. Sed iaculis commodo erat nec dignissim. Aenean vitae fermentum diam, fringilla vehicula orci. Donec quis lorem velit. Vivamus sit amet mauris volutpat, faucibus tellus quis, fringilla ligula. Phasellus tempor auctor malesuada. Duis tempor id dolor et sagittis. Vivamus sem magna, condimentum et lacus at, semper pretium nunc. Phasellus volutpat, metus eget egestas dictum, massa mauris dictum justo, quis viverra neque felis ut augue. In hendrerit eros vitae dui laoreet sodales. Praesent vitae odio vitae arcu luctus imperdiet. Phasellus venenatis ex in nunc finibus, ac elementum sapien aliquam. Etiam pulvinar tincidunt mauris non faucibus. Vestibulum ut enim sit amet metus sodales porttitor. Proin ut venenatis orci, nec volutpat neque. Integer pretium risus vel nibh fringilla, vel egestas lectus semper. Integer eleifend mauris id odio blandit ornare. In nec dui aliquam, pulvinar massa ut, mollis mi. Nunc nec mauris est. Nunc efficitur eget ligula et dapibus. Vestibulum varius urna quam, eget tristique magna fringilla id. Quisque blandit dolor mattis metus interdum lacinia. In in accumsan ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris nunc nunc, interdum nec tempus ut, facilisis vel eros. Curabitur vitae tellus nec elit semper faucibus. Donec sed diam facilisis, porttitor urna vitae, interdum sapien. Nunc nec eros at leo sollicitudin fermentum at et orci. Proin erat lorem, tincidunt id nunc vel, egestas sodales erat. Praesent sem augue, aliquam vulputate cursus quis, dapibus quis nisl. Aenean tincidunt sapien eu tincidunt rutrum. Aenean ultricies auctor magna eget tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus id massa diam. Etiam at ipsum id nisi finibus ultrices gravida eu est. Fusce at velit a urna pulvinar mollis sit amet vel quam. Vivamus mi ante, tempus id lacus sit amet, laoreet condimentum lectus. Nulla facilisi. Morbi eget nisl non nibh maximus maximus a a erat. Nulla nec pellentesque ex. Maecenas malesuada ante ac magna vestibulum, id tincidunt nisi vestibulum. Vestibulum at magna eu dolor finibus cursus fringilla a elit. Etiam a nunc in lacus maximus viverra. Nulla bibendum, tortor ac ultrices pulvinar, magna mi tristique tellus, sed mattis magna mauris et arcu. Donec consequat tortor et ligula condimentum dignissim. Aliquam at massa et massa blandit elementum nec sed nunc. Fusce tempor quam tellus, eu suscipit elit consequat et. Cras quis massa at nulla aliquet tristique eget sit amet eros. In pulvinar massa et orci rhoncus lacinia. Quisque semper feugiat erat, sit amet facilisis justo feugiat a. Nullam mattis lorem in nisl maximus, sed suscipit enim tempus. Nam sed aliquam elit, quis pharetra mi. Aliquam erat volutpat. Cras dapibus vel sapien non aliquet. Etiam lacinia tempus euismod. Donec ultricies est non ante eleifend, et blandit lorem consequat. Nulla tincidunt massa et tellus ornare, eu ornare nisl auctor. Nam ac posuere ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque porttitor, arcu et pharetra porta, tellus ipsum vestibulum ex, ac dictum risus mauris a massa. Phasellus in quam dui. Vestibulum et ligula at justo scelerisque posuere. Cras pretium ac nisi vel tincidunt. Suspendisse aliquam, tellus ac consectetur dapibus, turpis sapien dictum odio, sit amet fermentum ex elit at diam. In hac habitasse platea dictumst. Ut bibendum pharetra aliquet. Aenean condimentum lacus ligula, at auctor sem semper at. Aenean sollicitudin neque augue, at tempor est commodo eu. Mauris massa tortor, mollis posuere nisi vitae, efficitur volutpat odio. Phasellus faucibus pellentesque augue, ut vulputate augue condimentum vel. Aliquam eu gravida dui, sed vestibulum justo. Curabitur nec mauris augue. Sed eu lobortis magna. Suspendisse bibendum est hendrerit hendrerit dignissim. Sed vel nisi magna. Mauris ultricies tincidunt porttitor. Praesent congue diam turpis, eu feugiat neque sollicitudin sed. Nullam molestie est posuere odio luctus volutpat. Nam lacinia nisl vel ex sodales posuere. Curabitur quis aliquam nulla. Ut dapibus sem arcu, a posuere dolor hendrerit eleifend. Curabitur ornare eu lorem eget egestas. Vivamus venenatis porta ipsum, vitae efficitur felis porttitor ut. Donec lobortis ornare suscipit. Etiam eget dolor ut felis condimentum elementum. Duis pretium eget nunc a tempor. Pellentesque vel dui leo. Ut condimentum risus eu velit sollicitudin semper. Nullam pellentesque ut turpis vitae sollicitudin. Duis blandit feugiat odio sit amet fermentum. Quisque ultrices dapibus metus, sed laoreet mi blandit ut. Sed at dui vitae turpis suscipit varius et eu velit. Donec mattis augue placerat pharetra vehicula. Nam convallis mauris ut turpis ultricies, volutpat imperdiet eros viverra. Etiam nisl est, accumsan at scelerisque sit amet, elementum quis ex. Curabitur ac sapien lacus. Phasellus et eleifend nisl. Donec eu eleifend felis, id ultrices nibh. In hendrerit arcu quis justo blandit varius sed eget libero. Nulla egestas magna vehicula, pellentesque nibh quis, congue tortor. Ut sed hendrerit nisl, id posuere lorem. Suspendisse sodales est id mauris pretium porttitor. Integer risus magna, lacinia nec lorem eu, pulvinar mattis turpis. Proin aliquam turpis velit, quis placerat felis sollicitudin at. Fusce condimentum quam eget lorem interdum, et ornare urna fermentum. Quisque elit arcu, laoreet tempus leo id, blandit vehicula mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam mauris mauris, sollicitudin id tortor vitae, condimentum suscipit lectus. Morbi congue sit amet risus quis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent pellentesque metus eget quam pulvinar mollis. In ut neque risus. Curabitur massa erat, dapibus a lacus eget, faucibus rhoncus risus. Aenean imperdiet dolor quis commodo pulvinar. Vivamus porttitor diam fermentum interdum posuere.</string>

    <string name="hello_world">Hello World</string>
    <string name="short_string">Short String</string>
    <string name="medium_string">Medium String</string>
    <string name="long_string">Long String</string>
    <string name="absurd_string">Absurd String</string>
    <string name="array">Array of Values</string>
    <string name="dictionary">Dictionary of Values</string>
    <string name="complex">Complex Data Type</string>

    <string name="missing_widget">Missing Comm Widget</string>
    <string name="missing_widget_message">The Comm Widget used with this application is not installed on your ConnectIQ device.   Please install the widget and try again.</string>

    <string name="missing_store_id">Missing App Store Id</string>
    <string name="missing_store_id_message">Please add a valid store app id for STORE_APP_ID in DeviceActivity.</string>
    <string name="title_activity_intervention">InterventionActivity</string>

    <string name="intervention_message">Keep calm and Take a deep breath</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btn_stop_intervention">Click here to stop intervention</string>
    <string name="intervention">Intervention</string>
    <string name="stop_intervention">Stop intervention</string>

    <!-- Sensor Activity -->
    <string name="start_location_update">Start Location Updates</string>
    <string name="stop_location_updates">Stop Location Updates</string>
    <string name="start_acc_update">Start Acc Updates</string>
    <string name="stop_acc_updates">Stop Acc Updates</string>
    <string name="start_pu_update">Start Phone Usage Updates</string>
    <string name="stop_pu_updates">Stop Phone Usage Updates</string>

</resources>